<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3498db"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="20">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/result_japansese"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/toJResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/colorButtonNormal"
        android:gravity="center_vertical"
        android:hint="@string/result_hint"
        android:onClick="copy"
        android:padding="6dp"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <TextView
        android:id="@+id/inputNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/numMode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toJback1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="del1"
            android:layout_weight="1"
            android:text="@string/del1" />

        <Button
            android:id="@+id/toJbackAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delAll"
            android:text="@string/delAll" />

        <Button
            android:id="@+id/blank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="空白" />

        <Button
            android:id="@+id/speech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="speak"
            android:text="読み上げ" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitStart"
                    app:srcCompat="@color/colorAccent" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:scaleType="center"
                    android:src="@drawable/buttonchange"
                    android:tag="0"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:src="@drawable/buttonchange"
                    android:tag="3"
                    android:text="New Button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button2"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:src="@drawable/buttonchange"
                    android:tag="1"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button5"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:src="@drawable/buttonchange"
                    android:tag="4"
                    android:text="New Button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button3"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:src="@drawable/buttonchange"
                    android:tag="2"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button6"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_left"
                    android:src="@drawable/buttonchange"
                    android:tag="5"
                    android:text="New Button"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button7"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="0"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button10"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="3"
                    android:text="New Button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button8"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="1"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button11"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="4"
                    android:text="New Button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/button9"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="2"
                    android:text="New Button"/>

                <ImageButton
                    android:id="@+id/button12"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="button_right"
                    android:src="@drawable/buttonchange"
                    android:tag="5"
                    android:text="New Button"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>